--- a/css/wsdev_main.css
+++ b/css/wsdev_main.css
@@ -24,10 +24,43 @@
   padding: 0;
 }
 
-.hero .hero-wrapper {
+#hero .hero-wrapper {
   max-width: 1200px;
   margin: 0 auto;
 }
-.hero .hero-wrapper .hero-inner .hero-content .intro .intro-title {
-  color: aqua;
+#hero .hero-wrapper .hero-inner .hero-content {
+  display: grid;
+  grid-template-columns: 1.5fr 1fr;
+  grid-gap: 20px;
+}
+#hero .hero-wrapper .hero-inner .hero-content .intro {
+  padding-top: 150px;
+  font-family: "Maven Pro", sans-serif;
+}
+#hero .hero-wrapper .hero-inner .hero-content .intro .intro-text {
+  font-size: 1.5rem;
+  margin-bottom: 10px;
+}
+#hero .hero-wrapper .hero-inner .hero-content .intro .intro-title {
+  font-size: 3rem;
+  margin-bottom: 10px;
+}
+#hero .hero-wrapper .hero-inner .hero-content .intro .intro-subtitle {
+  font-size: 1em;
+  margin-bottom: 20px;
+}
+#hero .hero-wrapper .hero-inner .hero-content .intro .d-buttons {
+  display: flex;
+  gap: 10px;
+}
+#hero .hero-wrapper .hero-inner .hero-content .intro .d-buttons .d-resume, #hero .hero-wrapper .hero-inner .hero-content .intro .d-buttons .contact {
+  padding: 10px 20px;
+  border: none;
+  cursor: pointer;
+}
+#hero .hero-wrapper .hero-inner .hero-content .myImage .header-logo {
+  width: auto;
+  height: auto;
+  border-radius: 40%;
+  padding-top: 30px;
 }
