--- a/scss/scss_partials/_colors.scss
+++ b/scss/scss_partials/_colors.scss
@@ -4,7 +4,8 @@
     --accent-color: #e74c3c; 
     --background-color: #ecf0f1; 
     --text-color: #2c3e50; 
-    --muted-color: #95a5a6;
+    --muted-color: #eee;
     --main-color: #5271ff;
     --black-color: #000;
+    --button-color: #5b5b5b;
 }
