--- a/css/hero.css
+++ b/css/hero.css
@@ -25,6 +25,18 @@
   padding: 0;
 }
 
+body {
+  display: flex;
+  flex-direction: column;
+  height: auto;
+  width: auto;
+  overflow-y: auto;
+}
+
+html {
+  scroll-behavior: smooth;
+}
+
 #hero .hero-wrapper {
   max-width: 1200px;
   margin: 0 auto;
@@ -57,7 +69,8 @@
   grid-area: intro;
   font-family: "Maven Pro", sans-serif;
   padding: 20px;
-  padding-top: 100px;
+  padding-top: 150px;
+  padding-bottom: 100px;
 }
 @media screen and (min-width: 712px) {
   #hero .hero-wrapper .hero-inner .hero-content .intro {
