--- a/scss/projects.scss
+++ b/scss/projects.scss
@@ -51,13 +51,18 @@
                         .image-container {
                             position: relative;
                             width: 100%;
-                            height: auto;
+                            height: 0;
+                            padding-bottom: 56.25%; /* 16:9 aspect ratio */
                             border-radius: 8px;
                             overflow: hidden;
 
                             img {
+                                position: absolute;
+                                top: 0;
+                                left: 0;
                                 width: 100%;
                                 height: 100%;
+                                object-fit: cover;
                                 border-radius: 8px;
                                 transition: opacity 0.5s ease-in-out;
                             }
@@ -78,7 +83,51 @@
                                 transition: opacity 0.5s ease-in-out;
                                 border-radius: 8px;
                                 text-align: center;
-                                padding: 20px;
+
+
+                                p {
+                                    font-size: 1rem;
+                                    margin-bottom: 20px;
+                                    font-family: $font;
+                                    padding-left: 10px;
+                                    padding-right: 10px;
+                                    margin: 20px;
+                                    @include screensize(tablet) {
+                                        padding-left: 150px;
+                                        padding-right: 150px;
+                                    }
+                                    @include screensize($desktop) {
+                                        padding-left: 150px;
+                                        padding-right: 150px;
+                                    }
+                                }
+
+                                a {
+                                    color: var(--main-color);
+                                    text-decoration: none;
+                                    font-weight: bold;
+                                    margin-bottom: 20px;
+                                    transition: color 0.3s ease;
+                                    font-family: $font;
+                                    font-size: 1.2rem;
+
+                                    &:hover {
+                                        color: #fff;
+                                    }
+                                }
+
+                                .tech-stack {
+                                    display: flex;
+                                    flex-wrap: wrap;
+                                    gap: 10px;
+
+                                    span {
+                                        background: var(--main-color);
+                                        padding: 5px 10px;
+                                        border-radius: 5px;
+                                        font-size: 1rem;
+                                    }
+                                }
                             }
 
                             &:hover .details-overlay {
